Mon Jan 21 05:37:28 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java: new command line
	  option -v (show arguments of external command invocation).

Mon Jan 21 05:28:46 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java: new command line
	  option -S (generate assembly source and quit).

	* net/loveruby/cflat/compiler/Compiler.java: new command line
	  option -c (assemble and quit).

	* net/loveruby/cflat/compiler/Compiler.java: call GNU as and GNU
	  ld directly, instead of gcc.

	* net/loveruby/cflat/compiler/Compiler.java (commandMain):
	  refactoring: extract method: parseOptions.

	* net/loveruby/cflat/compiler/Compiler.java: refactoring:
	  introduce new class Options and hold all command options in it.

	* net/loveruby/cflat/compiler/Compiler.java: refactoring:
	  #compileFile do all tasks by referencing an Options.

Mon Jan 21 05:24:49 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/LibraryLoader.java: should reject
	  recursive import.

Mon Jan 21 02:51:02 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: produce Error for
	  UnknownEncodingError.  Current Java runtime must know UTF-8
	  encoding.

Mon Jan 21 01:58:57 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: refactoring: reorder member
	  decl.

Mon Jan 21 01:39:22 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: modify preproc tag.

Mon Jan 21 01:24:22 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: change symbol name to fix
	  compile error.

Mon Jan 21 01:22:05 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: refactoring: rename rule:
	  defvars -> defvar.

	* net/loveruby/cflat/parser/Parser.jj: refactoring: extract new
	  symbol defvar_list from block.

Mon Jan 21 01:19:10 2008  Minero Aoki  <aamine@loveruby.net>
