@@ -270,20 +270,20 @@ PARSER_END(Parser)
 
 // linear-white-spaces
 // #@@range/lex_spaces{
-SPECIAL_TOKEN: { <([" ","\t","\n","\r"])+> }
+SPECIAL_TOKEN: { <SPACES: ([" ","\t","\n","\r"])+> }
 // #@@}
 
 // block comment
 // #@@range/lex_block_comment{
-MORE: { "/*" : IN_BLOCK_COMMENT }
+MORE: { <"/*"> : IN_BLOCK_COMMENT }
 <IN_BLOCK_COMMENT> MORE: { <~[]> }
-<IN_BLOCK_COMMENT> SPECIAL_TOKEN: { "*/" : DEFAULT }
+<IN_BLOCK_COMMENT> SPECIAL_TOKEN: { <BLOCK_COMMENT: "*/"> : DEFAULT }
 // #@@}
 
 // line comment
 // #@@range/lex_line_comment{
 SPECIAL_TOKEN: {
-    <"//" (~["\n","\r"])* ("\n" | "\r\n" | "\r")?>
+    <LINE_COMMENT: "//" (~["\n","\r"])* ("\n" | "\r\n" | "\r")?>
 }
 // #@@}
 
